Begin to work on calendar ouput

--- a/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
+++ b/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,10 @@
     "#Import Necessary Packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#import matplotlib.pyplot as plt"
+    "import statistics as st\n",
+    "import calendar\n",
+    "import matplotlib.pyplot as plt\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -37,6 +40,7 @@
    "outputs": [],
    "source": [
     "# Convert Order_Date string to date and extract relevant date values\n",
+    "#https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior\n",
     "SD['Order_Date'] = pd.to_datetime(SD['Order_Date'], format= \"%d-%b-%y\")\n",
     "SD['OD_Year'] = SD['Order_Date'].dt.strftime('%Y')\n",
     "SD['OD_MonthNum'] = SD['Order_Date'].dt.strftime('%m')\n",
@@ -55,7 +59,7 @@
     "# Filter out any blank orderdate values\n",
     "FilterSD =    SD[(SD['Order_Date']!=\"\")\n",
     "           #& (SD['Supplier']==\"\")\n",
-    "           ]\n"
+    "           ]"
    ]
   },
   {
@@ -101,9 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.options.mode.chained_assignment = None\n",
-    "import statistics as st\n",
-    "import calendar\n",
+    "\n",
     "\n",
     "DueDatePrediction = pd.DataFrame(columns = ['attribute_set',\"MNum\",'Month' , 'Day', \n",
     "                                                \"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"June\", \"July\", \"Aug\", \n",
@@ -367,7 +369,7 @@
     "finalskuCount[\"%HalfYear\"] = finalskuCount[\"HalfYear\"] /(finalskuCount[\"OverYear\"] + finalskuCount[\"UnderYear\"])\n",
     "finalskuCount[\"%UnderPeakDays\"] = finalskuCount[\"UnderPeakDays\"] /(finalskuCount[\"OverYear\"] + finalskuCount[\"UnderYear\"])\n",
     "finalskuCount = finalskuCount.sort_values([\"TimesSold\", \"AvgDayDiff\", \"UnderYear\"] , ascending = [False,True, True])\n",
-    "#finalskuCount.to_csv (r'\\\\TDOTFS01\\Group\\Data Team\\Abul\\3. Final Folder\\finalskuCount.csv', index = None, header=True)\n",
+    "#finalskuCount.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\finalskuCount.csv', index = None, header=True)\n",
     "\n",
     "\n",
     "data = SoldSkus[SoldSkus[\"attribute_set\"]==\"Rough Country\"].DayDiff\n",
@@ -400,7 +402,7 @@
     "UpdatePrioritydf = UpdatePrioritydf[(UpdatePrioritydf[\"NewSkuRev\"]>0) & (UpdatePrioritydf[\"MNum\"] != 0)]\n",
     "\n",
     "UpdatePrioritydf = UpdatePrioritydf.sort_values([\"MNum\", \"Day\", \"NewSkuRev\"], ascending = [True, True, False]).reset_index()\n",
-    "UpdatePrioritydf.to_csv (r'\\\\TDOTFS01\\Group\\Data Team\\Abul\\3. Final Folder\\UpdatePrioritydf.csv', index = None, header=True)\n"
+    "UpdatePrioritydf.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\UpdatePrioritydf.csv', index = None, header=True)\n"
    ]
   },
   {
@@ -411,7 +413,7 @@
    "source": [
     "#Order and range brands to minimize revenue loss to determine update time\n",
     "FinalBrandProfile\n",
-    "FinalBrandProfile.to_csv (r'\\\\TDOTFS01\\Group\\Data Team\\Abul\\3. Final Folder\\FinalBrandProfile.csv', index = None, header=True)\n",
+    "FinalBrandProfile.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\FinalBrandProfile.csv', index = None, header=True)\n",
     "\n",
     "type(\"0\")\n"
    ]
@@ -587,7 +589,7 @@
     "for i in range(len(AllBrands)-1):\n",
     "    trend(i, DueDatePrediction)\n",
     "\n",
-    "DueDatePrediction.to_csv (r'\\\\TDOTFS01\\Group\\Data Team\\Abul\\3. Final Folder\\DueDatePrediction.csv', index = None, header=True) \n",
+    "DueDatePrediction.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\DueDatePrediction.csv', index = None, header=True) \n",
     "#Don't forget to add '.csv' at the end of the path"
    ]
   },
@@ -724,6 +726,38 @@
     "print [100 * (b - a) / a for a, b in zip(BrandYearSS['CumSum'][::1], BrandYearSS['CumSum'][1::1])]\n",
     "\n",
     "BrandFilterSD['PerSales'] =BrandFilterSD.apply(lambda BrandFilterSD: BrandFilterSD.count/total, axis = 1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Predict when to perform pricing update depending on day of month using logistic regression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "Path = \"//192.168.2.32/Group/Data Team/Brand_Update_Location/5_R_Brand_Reference_Files/Brand Launch Calendar - Event_Tracker.csv\"\n",
+    "BLC = pd.read_csv(Path, encoding='mac_roman')\n",
+    "BLC = BLC[[\"Date\", \"Brand\", \"Category\", \"Notes\"]]\n",
+    "\n",
+    "BLC['Date'] = pd.to_datetime(BLC['Date'], format=\"%d-%m-%y\")\n",
+    "BLC['Day'] = pd.DatetimeIndex(BLC['Date']).day\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Split the data into a training and test set.\n",
+    "Xlr, Xtestlr, ylr, ytestlr = train_test_split(BLC[['Height','Weight']].values, \n",
+    "                                              (BLC.Category == \"Male\").values,random_state=5)\n",
+    "\n",
+    "clf = LogisticRegression(solver='lbfgs')\n",
+    "# Fit the model on the trainng data.\n",
+    "clf.fit(Xlr, ylr)\n",
+    "# Print the accuracy from the testing data.\n",
+    "print(accuracy_score(clf.predict(Xtestlr), ytestlr))\n"
    ]
   },
   {
