--- a/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
+++ b/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,26 @@
     "import numpy as np\n",
     "import statistics as st\n",
     "import calendar\n",
+    "import datetime\n",
+    "import re\n",
     "import matplotlib.pyplot as plt\n",
     "pd.options.mode.chained_assignment = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Y:\\Abul\\Conda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3057: DtypeWarning: Columns (2,16,17,34,35,36,40,41,44,49,50,51,52,58) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "## Loading Data\n",
     "PastYearData =pd.read_csv(\"//192.168.2.32/Group/Data Team/Brand_Update_Location/11_Brand_Performance_Analysis/PastYearDataNew.csv\", encoding='utf-8')\t\n",
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "DueDatePrediction = pd.DataFrame(columns = ['attribute_set',\"MNum\",'Month' , 'Day', \n",
     "                                                \"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"June\", \"July\", \"Aug\", \n",
     "                                                \"Sep\", \"Oct\", \"Nov\", \"Dec\",\"TotalOAD\",\"peakDays\", \"test1\"])\n",
-    "\n",
-    "#def trend(value):\n",
-    "        \n",
+    "      \n",
     "for value in range(len(AllBrands)-1):\n",
     "\n",
     "    brand = AllBrands[value] \n",
@@ -257,15 +265,7 @@
     "    \n",
     "    DueDatePrediction = DueDatePrediction.append(pd.Series(DueDateData, index=DueDatePrediction.columns),  ignore_index=True)\n",
     "    Daydata = DueDatePrediction[[\"attribute_set\",\"peakDays\"]]\n",
-    "\n",
-    "            #print(\"------------------------\")\n",
-    "    #print(brand + \" \" + str(FindDup))\n",
-    "            #print(OverIdentify_Final)\n",
-    "            #SubsetWinMonth = SubsetWinMonth.fillna(\"\")\n",
-    "            #print(DueDatePrediction)\n",
-    "            \n",
-    "            \n",
-    "            "
+    "                        "
    ]
   },
   {
@@ -277,7 +277,6 @@
     "#subset internal sku, attribute set and order date from SD data frame\n",
     "SoldSkus = pd.DataFrame(SD.internal_sku.unique().astype(str))\n",
     "SoldSkus.columns = [\"internal_sku\"]\n",
-    "\n",
     "\n",
     "#Merge SoldSkus with SkuAddDate\n",
     "SoldSkus = pd.merge(SoldSkus, SkuAddDate, how='inner', on=\"internal_sku\")\n",
@@ -318,7 +317,7 @@
     "    else: \n",
     "        SoldSkus.loc[i, \"UnderPeakDays\"] = 0\n",
     "        \n",
-    "    if (DayDiff<365):c\n",
+    "    if (DayDiff<365):\n",
     "        SoldSkus.loc[i, \"UnderYear\"] = 1\n",
     "        SoldSkus.loc[i, \"OverYear\"] = 0\n",
     "        \n",
@@ -368,33 +367,20 @@
     "finalskuCount[\"%UnderYear\"] = finalskuCount[\"UnderYear\"] /(finalskuCount[\"OverYear\"] + finalskuCount[\"UnderYear\"])\n",
     "finalskuCount[\"%HalfYear\"] = finalskuCount[\"HalfYear\"] /(finalskuCount[\"OverYear\"] + finalskuCount[\"UnderYear\"])\n",
     "finalskuCount[\"%UnderPeakDays\"] = finalskuCount[\"UnderPeakDays\"] /(finalskuCount[\"OverYear\"] + finalskuCount[\"UnderYear\"])\n",
-    "finalskuCount = finalskuCount.sort_values([\"TimesSold\", \"AvgDayDiff\", \"UnderYear\"] , ascending = [False,True, True])\n",
-    "#finalskuCount.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\finalskuCount.csv', index = None, header=True)\n",
-    "\n",
-    "\n",
-    "data = SoldSkus[SoldSkus[\"attribute_set\"]==\"Rough Country\"].DayDiff\n",
-    "plt.boxplot(data)\n",
-    "plt.show()"
+    "finalskuCount = finalskuCount.sort_values([\"TimesSold\", \"AvgDayDiff\", \"UnderYear\"] , ascending = [False,True, True])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Aquire net revenue for all brands\n",
-    "\n",
     "BrandRev = monthlyGroupingAll.groupby(\"attribute_set\")[\"NetRevenue\"].agg(\"sum\")\n",
     "FinalBrandProfile = finalskuCount.merge(BrandRev, on=\"attribute_set\" ).merge(DueDatePrediction, on=\"attribute_set\" )\n",
     "FinalBrandProfile[\"%NewSkuRev\"] = (FinalBrandProfile[\"NewSkuRev\"]/FinalBrandProfile[\"NetRevenue\"])*100\n",
     "FinalBrandProfile[\"%NewSkuRev\"] = (FinalBrandProfile[\"NewSkuRev\"]/FinalBrandProfile[\"NetRevenue\"])*100\n",
-    "\n",
-    "#Factors to consider when ranking brands for updates\n",
-    "NewSkuRev\n",
-    "%NewSkuRev\n",
-    "MNum\n",
-    "Day\n",
     "\n",
     "UpdatePrioritydf = FinalBrandProfile[[\"attribute_set\", \"MNum\", \"Day\", \"NewSkuRev\", \"%NewSkuRev\"]]\n",
     "UpdatePrioritydf[\"MNum\"] = pd.to_numeric(UpdatePrioritydf[\"MNum\"])\n",
@@ -402,36 +388,84 @@
     "UpdatePrioritydf = UpdatePrioritydf[(UpdatePrioritydf[\"NewSkuRev\"]>0) & (UpdatePrioritydf[\"MNum\"] != 0)]\n",
     "\n",
     "UpdatePrioritydf = UpdatePrioritydf.sort_values([\"MNum\", \"Day\", \"NewSkuRev\"], ascending = [True, True, False]).reset_index()\n",
-    "UpdatePrioritydf.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\UpdatePrioritydf.csv', index = None, header=True)\n"
+    "#UpdatePrioritydf.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\UpdatePrioritydf.csv', index = None, header=True)\n",
+    "\n",
+    "UpdatePrioritydf.loc[(UpdatePrioritydf[\"MNum\"]==2) & (UpdatePrioritydf[\"Day\"]==29), \"Day\"] = 28\n",
+    "UpdatePrioritydf[\"Year\"] = year\n",
+    "UpdatePrioritydf[\"MNum\"] = UpdatePrioritydf[\"MNum\"].map(\"{:02}\".format)\n",
+    "UpdatePrioritydf[\"Day\"] = UpdatePrioritydf[\"Day\"].map(\"{:02}\".format)\n",
+    "\n",
+    "UpdatePrioritydf[\"Year\"] = UpdatePrioritydf[\"Year\"].astype(str)\n",
+    "UpdatePrioritydf[\"MNum\"] = UpdatePrioritydf[\"MNum\"].astype(str)\n",
+    "UpdatePrioritydf[\"Day\"] = UpdatePrioritydf[\"Day\"].astype(str)\n",
+    "\n",
+    "UpdatePrioritydf[\"Date\"] = UpdatePrioritydf[\"Year\"]+\"-\"+UpdatePrioritydf[\"MNum\"]+\"-\"+UpdatePrioritydf[\"Day\"] \n",
+    "UpdatePrioritydf[\"Date\"] = pd.to_datetime(UpdatePrioritydf[\"Date\"], format= \"%Y-%m-%d\")\n",
+    "UpdatePrioritydf[\"Weekday\"] = UpdatePrioritydf[\"Date\"].dt.dayofweek\n",
+    "UpdatePrioritydf[\"WeekNum\"] = UpdatePrioritydf[\"Date\"].dt.week\n",
+    "UpdatePrioritydf[\"Ref\"] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 392,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'=' alignment not allowed in string format specifier",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-392-fa5b81bfe8f5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mUpdatePrioritydf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mUpdatePrioritydf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"attribute_set\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mbrand\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Ref\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mUpdatePrioritydf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"WeekNum\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUpdatePrioritydf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"WeekNum\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{:02}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mUpdateSchedule\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'Day'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'WeekNum'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m53\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Year'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0myear\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mY:\\Abul\\Conda\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mmap\u001b[1;34m(self, arg, na_action)\u001b[0m\n\u001b[0;32m   3380\u001b[0m         \"\"\"\n\u001b[0;32m   3381\u001b[0m         new_values = super(Series, self)._map_values(\n\u001b[1;32m-> 3382\u001b[1;33m             arg, na_action=na_action)\n\u001b[0m\u001b[0;32m   3383\u001b[0m         return self._constructor(new_values,\n\u001b[0;32m   3384\u001b[0m                                  index=self.index).__finalize__(self)\n",
+      "\u001b[1;32mY:\\Abul\\Conda\\lib\\site-packages\\pandas\\core\\base.py\u001b[0m in \u001b[0;36m_map_values\u001b[1;34m(self, mapper, na_action)\u001b[0m\n\u001b[0;32m   1216\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1217\u001b[0m         \u001b[1;31m# mapper is a function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1218\u001b[1;33m         \u001b[0mnew_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap_f\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmapper\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1219\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1220\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mnew_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: '=' alignment not allowed in string format specifier"
+     ]
+    }
+   ],
    "source": [
-    "#Order and range brands to minimize revenue loss to determine update time\n",
-    "FinalBrandProfile\n",
-    "FinalBrandProfile.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\FinalBrandProfile.csv', index = None, header=True)\n",
+    "year = 2019\n",
+    "updateLimit = 4\n",
     "\n",
-    "type(\"0\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#X#Want to see per given month of the year, which brands should be updated in the given order of how much revenue and orders they get\n",
+    "for w in reversed(range(53)):\n",
+    "    weekBrands = UpdatePrioritydf[UpdatePrioritydf[\"WeekNum\"]==w]\n",
+    "    BrandPerWeek = len(weekBrands)\n",
+    "    #print(BrandPerWeek)\n",
+    "    if(BrandPerWeek > updateLimit):\n",
+    "        BrandDiff = BrandPerWeek - updateLimit\n",
+    "        MovingBrandList = (list(weekBrands.sort_values(\"NewSkuRev\", ascending = True)\n",
+    "                                .reset_index(drop=True)[0:BrandDiff][\"attribute_set\"]))\n",
+    "        UpdatePrioritydf.loc[UpdatePrioritydf[\"attribute_set\"].isin(MovingBrandList), \"WeekNum\"] = w-1\n",
+    "    weekBrands = UpdatePrioritydf[UpdatePrioritydf[\"WeekNum\"]==w].sort_values(\"NewSkuRev\", ascending = False).reset_index()\n",
+    "    for f in range(len(weekBrands)):\n",
+    "        brand = weekBrands[\"attribute_set\"][f]\n",
+    "        UpdatePrioritydf.loc[UpdatePrioritydf[\"attribute_set\"]==brand, \"Ref\"] = f\n",
+    "        \n",
+    "UpdatePrioritydf[\"WeekNum\"] = UpdatePrioritydf[\"WeekNum\"].map(\"{:02}\".format)\n",
     "\n",
-    "1. Per brand, during which month"
+    "UpdateSchedule = pd.DataFrame(data={'Day': 1, 'WeekNum': range(0,53), 'Year': year})\n",
+    "UpdateSchedule[\"Day\"] = UpdateSchedule[\"Day\"].astype(str)\n",
+    "UpdateSchedule[\"WeekNum\"] = UpdateSchedule[\"WeekNum\"].map(\"{:02}\".format).astype(str)\n",
+    "UpdateSchedule[\"Year\"] = UpdateSchedule[\"Year\"].astype(str)\n",
+    "\n",
+    "UpdateSchedule[\"Date_temp\"] = UpdateSchedule[\"Day\"]+\"-\"+UpdateSchedule[\"WeekNum\"]+\"-\"+UpdateSchedule[\"Year\"] \n",
+    "UpdateSchedule[\"Date_temp\"] = pd.to_datetime(UpdateSchedule[\"Date_temp\"], format= \"%w-%W-%Y\")\n",
+    "UpdateSchedule[\"Month\"] = UpdateSchedule[\"Date_temp\"].dt.month_name()\n",
+    "UpdateSchedule[\"Date\"] = UpdateSchedule[\"Date_temp\"].dt.day\n",
+    "\n",
+    "RankedBrands = UpdatePrioritydf.pivot(index='WeekNum', columns='Ref', values='attribute_set')\n",
+    "\n",
+    "UpdateScheduleFinal = (UpdateSchedule\n",
+    "                       .merge(RankedBrands, on=('WeekNum'))\n",
+    "                       .drop(columns=[\"Day\",\"WeekNum\",\"Year\",\"Date_temp\"])\n",
+    "                       .fillna(\"\"))\n",
+    "\n",
+    "#UpdateScheduleFinal.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\UpdateScheduleFinal.csv', index = None, header=True)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -730,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
