--- a/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
+++ b/O2_P10_UpdatePrediction_RnD_RoughWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Y:\\Abul\\Conda\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3057: DtypeWarning: Columns (2,16,17,34,35,36,40,41,44,49,50,51,52,58) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "## Loading Data\n",
     "PastYearData =pd.read_csv(\"//192.168.2.32/Group/Data Team/Brand_Update_Location/11_Brand_Performance_Analysis/PastYearDataNew.csv\", encoding='utf-8')\t\n",
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,10 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "year = 2020\n",
+    "updateLimit = 4\n",
+    "\n",
     "#Aquire net revenue for all brands\n",
     "BrandRev = monthlyGroupingAll.groupby(\"attribute_set\")[\"NetRevenue\"].agg(\"sum\")\n",
     "FinalBrandProfile = finalskuCount.merge(BrandRev, on=\"attribute_set\" ).merge(DueDatePrediction, on=\"attribute_set\" )\n",
@@ -403,9 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2019\n",
-    "updateLimit = 4\n",
-    "\n",
     "for w in reversed(range(53)):\n",
     "    weekBrands = UpdatePrioritydf[UpdatePrioritydf[\"WeekNum\"]==w]\n",
     "    BrandPerWeek = len(weekBrands)\n",
@@ -439,7 +448,7 @@
     "                       .drop(columns=[\"Day\",\"WeekNum\",\"Year\",\"Date_temp\"])\n",
     "                       .fillna(\"\"))\n",
     "\n",
-    "#UpdateScheduleFinal.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\3. Final Folder\\UpdateScheduleFinal.csv', index = None, header=True)\n",
+    "UpdateScheduleFinal.to_csv (r'\\\\192.168.2.32\\Group\\Data Team\\Abul\\UpdateScheduleFinal.csv', index = None, header=True)\n",
     "\n",
     "\n"
    ]
@@ -2835,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3619,7 +3628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
